--- a/2-JS-basics/starter/index.html
+++ b/2-JS-basics/starter/index.html
@@ -9,8 +9,6 @@
 <body>
     <h1>Section 2: JavaScript Language Basics</h1>
 </body>
-<script>
-    console.log('Hello World!');
-</script>
+<script src="script.js"></script>
 
 </html>
